# mokopanel

./: .gitignore  configure.ac  mokopanel_git.bb  run-panel.sh
data/: Makefile.am
data/themes/gry/: Makefile.am  theme.edc
src/: Makefile.am  battery.c  battery.h  clock.c  clock.h  globals.h  gps.c  gps.h  gsm.c  gsm.h  idle.c  idle.h  main.c  notifications-misc.c  notifications-misc.h  notifications-service.vala  notifications-win.c  notifications-win.h  notifications.xml  panel.c  panel.h  shutdown.c  shutdown.h
vapi/: config.vapi  panel.vapi
