SUBDIRS = themes

MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/mokosuite/panel
files_DATA = \
	wallpaper_mountain.jpg unknown.png \
	battery-unknown.png battery-0.png battery-10.png battery-20.png battery-40.png \
	battery-60.png battery-80.png battery-100.png \
	charging-10.png charging-20.png charging-40.png charging-60.png \
	charging-80.png charging-100.png gsm-null.png gsm-offline.png \
	gsm-0.png gsm-1.png gsm-2.png gsm-3.png gsm-4.png


EXTRA_DIST = $(files_DATA)
